methods.picture.MethodsPictureLarge.scala.error
Erreur de compilation :
MethodsPictureLarge:4: error: not found: value descendre
      descendre()
      ^